...
                                <color key="backgroundColor" name="YP Black"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="npG-j0-ZVJ"/>
                                    <constraint firstAttribute="width" constant="60" id="xjh-ua-1wU"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ty-MH-oGB">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="9lx-m3-fbg"/>
                                </constraints>
...
            <objects>
                <viewController storyboardIdentifier="webViewViewController" id="RHm-w0-xYy" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="OkX-mj-UfP">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="RlD-6s-W0e" userLabel="UnsplashWebView">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                <color key="backgroundColor" name="YP White"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rKn-FR-rOU" userLabel="Like Button">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="Like Button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="2BE-ww-6ex"/>
                                                        <constraint firstAttribute="height" constant="44" id="ROF-hq-6md"/>
                                                    </constraints>
...
                                <connections>
                                    <outlet property="delegate" destination="Lj9-ww-Jum" id="n1c-Xn-FjR"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BnY-Nf-aXN">
                                <rect key="frame" x="8" y="4" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="gtp-aQ-kN6"/>
                                    <constraint firstAttribute="width" constant="48" id="hHW-he-jcK"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
